--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.10.9",
-    "mongoose-autopopulate": "^0.12.2"
+    "mongoose": "^5.10.9"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
