--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "nodemon server.js",
+    "server": "node server.js",
     "tunnel": "ngrok http 4000"
   },
   "keywords": [],
