--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "admin-api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "web.js",
   "scripts": {
     "start": "nodemon server.js",
     "server": "node server.js",
     "tunnel": "ngrok http 4000"
   },
-  "keywords": [],
+  "keywords": ["heroku"],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -24,5 +24,8 @@
   "devDependencies": {
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.4"
+  },
+  "engines" : {
+    "node" : "12.14.1"
   }
 }
