--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "admin-api",
   "version": "1.0.0",
   "description": "",
-  "main": "web.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "server": "node server.js",
