--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "tunnel": "ngrok http 4000"
+    "tunnel": "ngrok http 4000",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
+
   },
   "keywords": ["heroku"],
   "author": "",
